Update wallet configuration comments in .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,10 @@ USER_ADDRESSES = ''
 # ------------------------------------------------------------------------------
 # YOUR WALLET CONFIGURATION
 # ------------------------------------------------------------------------------
-# Your Polygon wallet address (must match PRIVATE_KEY)
+# Your Polymarket wallet address
 PROXY_WALLET = ''
 
-# Your wallet's private key (WITHOUT 0x prefix)
+# Private key of the wallet you logged into the Polymarket with
 # ⚠️  NEVER share this key or commit it to git!
 PRIVATE_KEY = 'your_private_key_here_without_0x_prefix'
 
